k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tcp-echo-v1
  labels:
    app: tcp-echo
    system: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-echo
  template:
    metadata:
      labels:
        app: tcp-echo
        system: example
        version: v1
    spec:
      containers:
        - name: tcp-echo-container
          image: registry.cn-hangzhou.aliyuncs.com/wangxining/tcptest:0.1
          imagePullPolicy: Always
          ports:
            - name: tcp-echo-port
              containerPort: 3333
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tcp-echo-v2
  labels:
    app: tcp-echo
    system: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-echo
  template:
    metadata:
      labels:
        app: tcp-echo
        system: example
        version: v2
    spec:
      containers:
        - name: tcp-echo-container
          image: registry.cn-hangzhou.aliyuncs.com/wangxining/tcptest:0.1
          imagePullPolicy: Always
          ports:
            - name: tcp-echo-port
              containerPort: 3333
