k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "tcp-echo"
  labels:
    app: tcp-echo
    system: example
spec:
  selector:
    app: "tcp-echo"
  ports:
    - protocol: "TCP"
      port: 3333
      targetPort: 3333
  type: ClusterIP
